<!--
  ~ Copyright (C) 2020 Alessandro 'kLeZ' Accardo
  ~
  ~ This file is part of RG-RPG.
  ~
  ~ RG-RPG is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ RG-RPG is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with RG-RPG.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>it.d4nguard</groupId>
	<artifactId>rgrpg</artifactId>
	<version>0.0.2</version>
	<packaging>jar</packaging>
	<name>RG-RPG</name>
	<url>http://github.com/kLeZ/RG-RPG</url>
	<description>RG-RPG is a Java-based text, roleplaying-gal game, in which you have to carry many girls. The RG-RPG acronym is a recursive one and it means &quot;RG-RPG is a Gal Role playing game Pointing on Girls.&quot;</description>
	<organization>
		<name>D4nGuARd</name>
	</organization>
	<developers>
		<developer>
			<name>Alessandro Accardo</name>
			<email>julius8774@gmail.com</email>
			<organization>D4nGuARd</organization>
			<roles>
				<role>Founder</role>
			</roles>
			<timezone>1</timezone>
		</developer>
	</developers>
	<scm>
		<url>https://github.com/kLeZ/RG-RPG</url>
		<connection>scm:git:https://github.com/kLeZ/RG-RPG.git</connection>
	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/kLeZ/RG-RPG/issues</url>
	</issueManagement>
	<licenses>
		<license>
			<name>General Public License 3.0</name>
			<url>http://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
		</license>
	</licenses>
	<properties>
		<jdk.version>15</jdk.version>
		<compiler-plugin.version>3.8.1</compiler-plugin.version>
		<jar-plugin.version>3.2.0</jar-plugin.version>
		<dependency-plugin.version>3.1.2</dependency-plugin.version>
		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
		<shade-plugin.version>3.2.4</shade-plugin.version>
		<javadoc-plugin.version>3.1.1</javadoc-plugin.version>
		<umlgraph.version>5.6.6</umlgraph.version>
		<reflections.version>0.9.12</reflections.version>
		<jscience.version>4.3.1</jscience.version>
		<commons-lang3.version>3.11</commons-lang3.version>
		<junit.version>4.13.1</junit.version>
		<ognl.version>3.2.14</ognl.version>
		<text-io.version>3.4.1</text-io.version>
	</properties>
	<repositories>
		<repository>
			<id>apache-snapshots</id>
			<url>http://repository.apache.org/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<build>
		<directory>bin</directory>
		<outputDirectory>bin</outputDirectory>
		<finalName>${project.artifactId}-${project.version}</finalName>
		<sourceDirectory>src</sourceDirectory>
		<testSourceDirectory>tst</testSourceDirectory>
		<testOutputDirectory>bin</testOutputDirectory>
		<resources>
			<resource>
				<directory>res</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${jar-plugin.version}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>it.d4nguard.rgrpg.Main</mainClass>
							<classpathPrefix>lib</classpathPrefix>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${dependency-plugin.version}</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}</outputDirectory>
							<overWriteReleases>false</overWriteReleases>
							<overWriteSnapshots>false</overWriteSnapshots>
							<overWriteIfNewer>true</overWriteIfNewer>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>${shade-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<finalName>${project.artifactId}-all</finalName>
							<shadedArtifactAttached>true</shadedArtifactAttached>
							<shadedClassifierName>all</shadedClassifierName>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<!-- Requires GraphViz to be installed and the GRAPHVIZ_HOME env var 
					set -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${javadoc-plugin.version}</version>
				<configuration>
					<doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
					<docletArtifact>
						<groupId>org.umlgraph</groupId>
						<artifactId>umlgraph</artifactId>
						<version>${umlgraph.version}</version>
					</docletArtifact>
					<additionalOptions>
						<additionalOption>-horizontal</additionalOption>
						<additionalOption>-attributes</additionalOption>
						<additionalOption>-enumconstants</additionalOption>
						<additionalOption>-enumerations</additionalOption>
						<additionalOption>-operations</additionalOption>
						<additionalOption>-types</additionalOption>
						<additionalOption>-visibility</additionalOption>
						<additionalOption>-inferrel</additionalOption>
						<additionalOption>-inferdep</additionalOption>
						<additionalOption>-hide java.*</additionalOption>
						<additionalOption>-collpackages java.util.*</additionalOption>
						<additionalOption>-views</additionalOption>
						<additionalOption>-all</additionalOption>
					</additionalOptions>
					<useStandardDocletOptions>true</useStandardDocletOptions>
					<show>public</show>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>${reflections.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jscience</groupId>
			<artifactId>jscience</artifactId>
			<version>${jscience.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ognl</groupId>
			<artifactId>ognl</artifactId>
			<version>${ognl.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.javassist</groupId>
					<artifactId>javassist</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.beryx</groupId>
			<artifactId>text-io</artifactId>
			<version>${text-io.version}</version>
		</dependency>
	</dependencies>
</project>
